<resources>
    <string name="msg_wifi_enabled">Wifi enabled</string>
    <string name="msg_mobile_data_enabled">Mobile data enabled</string>
    <string name="msg_not_connected_to_internet">Not connected to Internet</string>

    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data Message: "</string>
    <string name="log_fcm_data_message">"FCM Data Message:(TA)G "</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="session_expired">Session expired.</string>
    <string name="loading">Loading…</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!--Error-->
    <string name="error_email_field_empty">Please enter email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_password_field_empty">Please enter password.</string>
    <string name="error_confirm_password_field_empty">Please enter confirm password.</string>
    <string name="error_password_must_be_greater_than_5_character">Password must be greater than 5 character.</string>
    <string name="error_phone_number_field_empty">Please enter phone number.</string>
    <string name="error_invalid_phone_number">Please enter valid phone number.</string>
    <string name="error_first_name_field_empty">Please enter first name</string>
    <string name="error_name_field_empty">Please enter name</string>
    <string name="error_last_name_field_empty">Please enter last name</string>
    <string name="error_name_two_character_long">Name must contain at least two characters</string>
    <string name="error_first_name_two_character_long">First name must contain at least two characters</string>
    <string name="error_last_name_two_character_long">Last name must contain at least two characters</string>
    <string name="error_name_special_number_character">Name cannot contain number &amp; special characters</string>
    <string name="error_first_name_special_number_character">First name cannot contain number &amp; special characters</string>
    <string name="error_last_name_special_number_character">Last name cannot contain number &amp; special characters</string>
    <string name="error_password_mismatch">Password Mismatch!</string>
    <string name="error_no_files_added">No files added</string>
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_internet_not_connected">Not connected to internet. Please check your internet connection or try again later.</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>
    <string name="error_invalid_data">invalide date must follow 1997-02-12</string>
    <string name="error_DOB_empty">DOB file cannot be empty</string>

    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>

    <string name="sign_in">Sign In</string>
    <string name="dob">DOB</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_accept">I accept Terms of Service and Privacy Policy</string>
    <string name="max_phone_no_length">10</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="network_view">Network View</string>
    <string name="payment">Payment</string>
    <string name="job_history">Job History</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="support_via">Support via Call/Email</string>
    <string name="missed_jobs">Missed Jobs</string>
    <string name="title_location_permission">GPS Permission</string>
    <string name="text_location_permission">GPS is required to be enabled for this section to get your location</string>
    <string name="ok">OK</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="remember_me">Remember me</string>
    <string name="gender">Gender</string>


</resources>
